Complete code implementation and add integration guide
- Added missing MassUnitNavigationFragment to support navigation system
- Enhanced MassUnitSubsystem to initialize and manage all subsystems
- Updated MassUnitEntityManager with getter methods for maps
- Added comprehensive integration guide
- Added .gitignore to exclude binary files
- Updated build script and configuration files

--- a/MassUnitSystem.uplugin
+++ b/MassUnitSystem.uplugin
@@ -28,14 +28,6 @@
 	],
 	"Plugins": [
 		{
-			"Name": "MassEntity",
-			"Enabled": true
-		},
-		{
-			"Name": "MassGameplay",
-			"Enabled": true
-		},
-		{
 			"Name": "Niagara",
 			"Enabled": true
 		},
@@ -45,7 +37,8 @@
 		},
 		{
 			"Name": "GASCompanion",
-			"Enabled": true
+			"Enabled": true,
+			"Optional": true
 		}
 	]
 }
