Add MassGameplay to plugin dependencies in MassUnitSystem.uplugin

--- a/MassUnitSystem.uplugin
+++ b/MassUnitSystem.uplugin
@@ -37,6 +37,10 @@
 			"Enabled": true
 		},
 		{
+			"Name": "MassGameplay",
+			"Enabled": true
+		},
+		{
 			"Name": "GASCompanion",
 			"Enabled": true,
 			"Optional": true
