dependency tweaks for fresh proj in 5.6

--- a/MassUnitSystem.uplugin
+++ b/MassUnitSystem.uplugin
@@ -37,13 +37,25 @@
 			"Enabled": true
 		},
 		{
-			"Name": "MassGameplay",
-			"Enabled": true
-		},
-		{
 			"Name": "GASCompanion",
 			"Enabled": true,
 			"Optional": true
+		},
+		{
+			"Name": "MassAI",
+			"Enabled": true
+		},
+		{
+			"Name": "MassNavigation",
+			"Enabled": true
+		},
+		{
+			"Name": "MassZoneGraphNavigation",
+			"Enabled": true
+		},
+		{
+			"Name": "MassAIBehavior",
+			"Enabled": true
 		}
 	]
 }
